--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,13 @@
     <string name="disable_fixed_orientation">Disable fixed orientation</string>
     <string name="disable_fixed_orientation_scope">Disable fixed orientation scope</string>
     <string name="disable_fixed_orientation_scope_tips">Take effect after reboot</string>
-    <string name="disable_fixed_orientation_tips">Disable some app&apos;s fixed orientation</string>
+    <string name="disable_fixed_orientation_tips">Disable some app\'s fixed orientation</string>
     <string name="done">OK</string>
     <string name="enable_stylus_input_method">Remove Scribe bluetooth restriction</string>
     <string name="enable_stylus_input_method_tips">Make Scribe works without the need of bluetooth connection to official stylus</string>
     <string name="finished">Finished</string>
-    <string name="fix_disable_multi_finger_gesture_filter">Fix "Don't respond to three- and four-finger gestures" function</string>
-    <string name="fix_disable_multi_finger_gesture_filter_tips">Controlled by both "Home - Don't respond to three- and four-finger gestures" and "Game DND - Restrict screenshot gestures"</string>
+    <string name="fix_disable_multi_finger_gesture_filter">Fix \"Don\'t respond to three- and four-finger gestures\" function</string>
+    <string name="fix_disable_multi_finger_gesture_filter_tips">Controlled by both \"Home - Don\'t respond to three- and four-finger gestures\" and \"Game DND - Restrict screenshot gestures\"</string>
     <string name="ignore_stylus_key_gesture">Ignore stylus buttons gesture</string>
     <string name="ignore_stylus_key_gesture_tips">Ignore the long press gesture on the stylus buttons</string>
     <string name="input">Input</string>
@@ -29,7 +29,7 @@
     <string name="restart_all_scope">Restart all scope</string>
     <string name="restart_all_scope_tips">Are you sure to restart all scope?</string>
     <string name="restore_esc">Restore ESC function</string>
-    <string name="restore_esc_tips">Restore ESC function which has been hard-mapped to "back" function by MIUI</string>
+    <string name="restore_esc_tips">Restore ESC function which has been hard-mapped to \"back\" function by MIUI</string>
     <string name="restore_meta_key_android11">Restore Meta key (Android 11)</string>
     <string name="restore_meta_key_android11_tips">Restore Meta/Win key function on Android 11</string>
     <string name="restore_meta_key_android12">Restore Meta key (Android 12+)</string>
